Added real texts & images

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                 Для производства
                             </a>
                             <a class="category__tab" data-toggle="list" href="#syrup-products" role="tab" aria-controls="syrup-products">
-                                Для производства
+                                Для продукции
                             </a>
                         </div>
                         <div class="category__tabs-content tab-content">
@@ -244,8 +244,110 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane fade" id="syrup-production" role="tabpanel">...</div>
-                            <div class="tab-pane fade" id="syrup-products" role="tabpanel">...</div>
+                            <div class="tab-pane fade" id="syrup-production" role="tabpanel">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/manufacturability.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Удобство использования, технологичность (сироп уже готов к использованию на производстве)</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/purity.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Исключительная чистота сиропа</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/humidity-control.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Гидратация/контроль влажности (удерживает влагу и предотвращает кристализацию сахаров в готовом продукте)</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/fermentation.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Легкая ферментация</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="syrup-products" role="tabpanel">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/prevents-drying.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Препятствует быстрому высыханию для продуктов с малым содержанием жира</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/shelf-life.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Увеличение сроков хранения</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/porous-structure.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Пористая структура, рассыпчатость, хрустящий вкус (хлебобулочных изделий)</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/no-sediment.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Отсутствие осадка (в напитках)</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/marshmallow.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Придает воздушную консистенцию при изготовлении зефира и патоки</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/taste.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Усиление вкуса и аромата</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/stability.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Стабильность при хранении и в готовых изделиях</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/caramel.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Гибкость при варке карамели</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/golden-crust.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Придание продукту золотистой корочки</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/glossing.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Глянцевание, блеск, глазировка</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/softness.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Мягкость и пластичность (для конфетных начинок)</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/prevents-drying-2.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Препятствует засыханию в процессе хранения</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -286,37 +388,64 @@
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="advantage">
-                                            <img src="images/categories/time.jpg" class="advantage__image" alt="">
-                                            <div class="advantage__caption">Сокращение времени производственных процессов и энергопотребления, затрат, связанных с использованием ГФС по сравнению с использованием сахара</div>
+                                            <img src="images/categories/protein-removal.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Для одновременного удаления белков и полифенолов из пива</div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="advantage">
-                                            <img src="images/categories/pump.jpg" class="advantage__image" alt="">
-                                            <div class="advantage__caption">Быстро и легко перекачивается и складируется</div>
+                                            <img src="images/categories/kieselguhr-consumption.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Расход кизельгура снижается, при получении лучших результатов поколлоидной стабильности</div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="advantage">
-                                            <img src="images/categories/economy.jpg" class="advantage__image" alt="">
-                                            <div class="advantage__caption">Более экономичен в сравнении с сахаром при производстве хлебобулочных изделий, алкоголя т.к. дрожжи и комплексы легче сбраживают моносахариды, чем сахарозу. 96% сахаров — ГФС</div>
+                                            <img src="images/categories/dosage-methods.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Силикагель может дозироваться как через дозатор кизельгура, так и через отдельный дозатор для увеличения времени контакта в буферной ёмкости и получения более эффективного результата</div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="advantage">
-                                            <img src="images/categories/spoon.jpg" class="advantage__image" alt="">
-                                            <div class="advantage__caption">Производство ГФС не ограничивается периодом сбора урожая</div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="advantage">
-                                            <img src="images/categories/sugar.jpg" class="advantage__image" alt="">
-                                            <div class="advantage__caption">Используется как для полной, так и для частичной замены сахара, патоки, инверта, искусственного меда в сахаросодержащих продуктах</div>
+                                            <img src="images/categories/physicochemical-parameters.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Физико-химические параметры обеспечивают максимальную эффективность при стабилизации и избирательной адсорбации</div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane fade" id="silicagel-winemaking" role="tabpanel">...</div>
+                            <div class="tab-pane fade" id="silicagel-winemaking" role="tabpanel">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/protein-removal.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Химически инертен, не влияет на качество и вкус вина</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/kieselguhr-consumption.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Обеспечивает снижение дозировки бентонита</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/dosage-methods.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Уменьшение фильтр-прессной лепешки</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/physicochemical-parameters.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Увеличение продолжительности цикла фильтра</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/physicochemical-parameters.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Сокращение потерь вина при фильтрации</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
