--- a/src/html/blocks/parts/category-silicagel.html
+++ b/src/html/blocks/parts/category-silicagel.html
@@ -33,10 +33,14 @@
         <div class="category__tabs-content tab-content">
             <div class="tab-pane fade show active" id="silicagel-brewing" role="tabpanel">
                 <div class="row">
-                    @@loop("category-advantage-item.html", "../../data/categories/syrup-cost-price.json")
+                    @@loop("category-advantage-item.html", "../../data/categories/silicagel-brewing.json")
                 </div>
             </div>
-            <div class="tab-pane fade" id="silicagel-winemaking" role="tabpanel">...</div>
+            <div class="tab-pane fade" id="silicagel-winemaking" role="tabpanel">
+                <div class="row">
+                    @@loop("category-advantage-item.html", "../../data/categories/silicagel-winemaking.json")
+                </div>
+            </div>
         </div>
     </div>
 </div>
