Added pictures for winemaking category & download files for syrup category

--- a/index.html
+++ b/index.html
@@ -188,8 +188,12 @@
                                 нейтральны в аромате с интенсивно сладким вкусом без посторонних примесей.
                             </div>
                             <div class="category__links">
-                                <a href="#" class="category__link">Презентация глюкозно-фруктозных сиропов</a>
-                                <a href="#" class="category__link">Сертификация ГФС-42, ГФС-55</a>
+                                <a href="downloads/gfs-presentation.pdf" class="category__link" target="_blank">
+                                    Презентация глюкозно-фруктозных сиропов
+                                </a>
+                                <a href="downloads/gfs-certificate.pdf" class="category__link" target="_blank">
+                                    Сертификация ГФС-42, ГФС-55
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-6 order-0 order-md-1">
@@ -364,10 +368,10 @@
                                 адсорбции из пива (вина) белков, вызывающих «холодное» помутнение, а также сохраняют
                                 необходимое пенообразование.
                             </div>
-                            <div class="category__links">
-                                <a href="#" class="category__link">Презентация силикагелевых стабилизаторов</a>
-                                <a href="#" class="category__link">Сертификат безопасности</a>
-                            </div>
+                            <!--            <div class="category__links">-->
+                            <!--                <a href="#" class="category__link">Презентация силикагелевых стабилизаторов</a>-->
+                            <!--                <a href="#" class="category__link">Сертификат безопасности</a>-->
+                            <!--            </div>-->
                         </div>
                         <div class="col-md-6 order-0 order-md-1">
                             <img src="images/categories/silicagel-img.png" class="category__image" alt="">
@@ -416,32 +420,32 @@
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="advantage">
-                                            <img src="images/categories/protein-removal.jpg" class="advantage__image" alt="">
+                                            <img src="images/categories/chemically-inert.jpg" class="advantage__image" alt="">
                                             <div class="advantage__caption">Химически инертен, не влияет на качество и вкус вина</div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="advantage">
-                                            <img src="images/categories/kieselguhr-consumption.jpg" class="advantage__image" alt="">
-                                            <div class="advantage__caption">Обеспечивает снижение дозировки бентонита</div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="advantage">
-                                            <img src="images/categories/dosage-methods.jpg" class="advantage__image" alt="">
+                                            <img src="images/categories/filter-press-cake.jpg" class="advantage__image" alt="">
                                             <div class="advantage__caption">Уменьшение фильтр-прессной лепешки</div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="advantage">
-                                            <img src="images/categories/physicochemical-parameters.jpg" class="advantage__image" alt="">
-                                            <div class="advantage__caption">Увеличение продолжительности цикла фильтра</div>
+                                            <img src="images/categories/bentonite-dosage.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Обеспечивает снижение дозировки бентонита</div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="advantage">
-                                            <img src="images/categories/physicochemical-parameters.jpg" class="advantage__image" alt="">
+                                            <img src="images/categories/filtration-loss.jpg" class="advantage__image" alt="">
                                             <div class="advantage__caption">Сокращение потерь вина при фильтрации</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="advantage">
+                                            <img src="images/categories/filter-duration.jpg" class="advantage__image" alt="">
+                                            <div class="advantage__caption">Увеличение продолжительности цикла фильтра</div>
                                         </div>
                                     </div>
                                 </div>
