--- a/src/html/blocks/parts/category-syrup.html
+++ b/src/html/blocks/parts/category-syrup.html
@@ -8,8 +8,12 @@
                 нейтральны в аромате с интенсивно сладким вкусом без посторонних примесей.
             </div>
             <div class="category__links">
-                <a href="#" class="category__link">Презентация глюкозно-фруктозных сиропов</a>
-                <a href="#" class="category__link">Сертификация ГФС-42, ГФС-55</a>
+                <a href="downloads/gfs-presentation.pdf" class="category__link" target="_blank">
+                    Презентация глюкозно-фруктозных сиропов
+                </a>
+                <a href="downloads/gfs-certificate.pdf" class="category__link" target="_blank">
+                    Сертификация ГФС-42, ГФС-55
+                </a>
             </div>
         </div>
         <div class="col-md-6 order-0 order-md-1">
