--- a/src/html/blocks/head.html
+++ b/src/html/blocks/head.html
@@ -6,6 +6,8 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
+        <script src="https://www.google.com/recaptcha/api.js?render=6LcV2OMZAAAAADkO9uYTHQhJ4CjWd4QFPQJExfqA"></script>
+
         <link rel="stylesheet" href="css/bootstrap-grid.min.css">
         <link rel="stylesheet" href="css/flickity.css">
         <link rel="stylesheet" href="css/jquery.fancybox.min.css">
