--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -19,7 +19,7 @@
                                 </div>
                                 <div class="col-xl-6">
                                     <a href="tel:+79882400735" class="footer__phone">8 (988) 240-07-35</a>
-                                    <a href="mailto:da@biotr.ru" class="footer__email">da@biotr.ru</a>
+                                    <a href="mailto:da@biotr.ru" class="footer__email">office@biotr.ru</a>
                                 </div>
                             </div>
                         </div>
