--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-auto">
                         <a href="tel:+79882400735" class="header__phone">8 (988) 240-07-35</a>
-                        <a href="mailto:da@biotr.ru" class="header__email">da@biotr.ru</a>
+                        <a href="mailto:da@biotr.ru" class="header__email">office@biotr.ru</a>
                     </div>
                 </div>
             </div>
