--- a/src/html/blocks/parts/category-syrup.html
+++ b/src/html/blocks/parts/category-syrup.html
@@ -11,7 +11,7 @@
                 <a href="downloads/gfs-presentation.pdf" class="category__link" target="_blank">
                     Презентация глюкозно-фруктозных сиропов
                 </a>
-                <a href="downloads/gfs-certificate.pdf" class="category__link" target="_blank">
+                <a href="#" class="category__link" target="_blank">
                     Сертификация ГФС-42, ГФС-55
                 </a>
             </div>
