--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                     </div>
                                     <div class="col-auto">
                                         <a href="tel:+79882400735" class="header__phone">8 (988) 240-07-35</a>
-                                        <a href="mailto:da@biotr.ru" class="header__email">da@biotr.ru</a>
+                                        <a href="mailto:da@biotr.ru" class="header__email">office@biotr.ru</a>
                                     </div>
                                 </div>
                             </div>
@@ -193,7 +193,7 @@
                                 <a href="downloads/gfs-presentation.pdf" class="category__link" target="_blank">
                                     Презентация глюкозно-фруктозных сиропов
                                 </a>
-                                <a href="downloads/gfs-certificate.pdf" class="category__link" target="_blank">
+                                <a href="#" class="category__link" target="_blank">
                                     Сертификация ГФС-42, ГФС-55
                                 </a>
                             </div>
@@ -370,10 +370,10 @@
                                 адсорбции из пива (вина) белков, вызывающих «холодное» помутнение, а также сохраняют
                                 необходимое пенообразование.
                             </div>
-                            <!--            <div class="category__links">-->
-                            <!--                <a href="#" class="category__link">Презентация силикагелевых стабилизаторов</a>-->
-                            <!--                <a href="#" class="category__link">Сертификат безопасности</a>-->
-                            <!--            </div>-->
+                            <div class="category__links">
+                                <a href="#" class="category__link">Презентация силикагелевых стабилизаторов</a>
+                                <a href="downloads/silicagel-certificate.pdf" class="category__link">Сертификат безопасности</a>
+                            </div>
                         </div>
                         <div class="col-md-6 order-0 order-md-1">
                             <img src="images/categories/silicagel-img.png" class="category__image" alt="">
@@ -521,9 +521,6 @@
                     <div class="logistics__equipment" style="background-image: url('images/logistics/barrels.jpg')">
                         <div class="logistics__equipment-name">Пластиковые бочки</div>
                     </div>
-                    <div class="logistics__equipment" style="background-image: url('images/logistics/barrels.jpg')">
-                        <div class="logistics__equipment-name">Еще бочки</div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -618,7 +615,7 @@
                             </div>
                             <div class="col-xl-6">
                                 <a href="tel:+79882400735" class="footer__phone">8 (988) 240-07-35</a>
-                                <a href="mailto:da@biotr.ru" class="footer__email">da@biotr.ru</a>
+                                <a href="mailto:da@biotr.ru" class="footer__email">office@biotr.ru</a>
                             </div>
                         </div>
                     </div>
