--- a/src/html/blocks/parts/category-silicagel.html
+++ b/src/html/blocks/parts/category-silicagel.html
@@ -9,10 +9,10 @@
                 адсорбции из пива (вина) белков, вызывающих «холодное» помутнение, а также сохраняют
                 необходимое пенообразование.
             </div>
-<!--            <div class="category__links">-->
-<!--                <a href="#" class="category__link">Презентация силикагелевых стабилизаторов</a>-->
-<!--                <a href="#" class="category__link">Сертификат безопасности</a>-->
-<!--            </div>-->
+            <div class="category__links">
+                <a href="#" class="category__link">Презентация силикагелевых стабилизаторов</a>
+                <a href="downloads/silicagel-certificate.pdf" class="category__link">Сертификат безопасности</a>
+            </div>
         </div>
         <div class="col-md-6 order-0 order-md-1">
             <img src="images/categories/silicagel-img.png" class="category__image" alt="">
