--- a/src/html/blocks/parts/category-silicagel.html
+++ b/src/html/blocks/parts/category-silicagel.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="category__advantages">
-        <div class="subtitle">Применение силикогелевых стабилизаторов</div>
+        <div class="subtitle">Применение силикагелевых стабилизаторов</div>
         <div class="category__tabs list-group" role="tablist">
             <a class="category__tab active" data-toggle="list" href="#silicagel-brewing" role="tab"
                aria-controls="silicagel-brewing">
