--- a/src/html/blocks/use.html
+++ b/src/html/blocks/use.html
@@ -21,7 +21,7 @@
                 <div class="subtitle">Силикагелевые стабилизаторы</div>
                 <div class="use__description">
                     Для предотвращения коллоидного помутнения пива (вина) на этапе фильтрации применяют порошковый
-                    селикогель, который изберательно адсорбирует белковые соединения, что приводит к устранению
+                    силикагель, который изберательно адсорбирует белковые соединения, что приводит к устранению
                     причины помутнения пива.
                 </div>
                 <div class="use__list">
