--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <div class="subtitle">Силикагелевые стабилизаторы</div>
                         <div class="use__description">
                             Для предотвращения коллоидного помутнения пива (вина) на этапе фильтрации применяют порошковый
-                            селикогель, который изберательно адсорбирует белковые соединения, что приводит к устранению
+                            силикагель, который изберательно адсорбирует белковые соединения, что приводит к устранению
                             причины помутнения пива.
                         </div>
                         <div class="use__list">
@@ -380,7 +380,7 @@
                         </div>
                     </div>
                     <div class="category__advantages">
-                        <div class="subtitle">Применение силикогелевых стабилизаторов</div>
+                        <div class="subtitle">Применение силикагелевых стабилизаторов</div>
                         <div class="category__tabs list-group" role="tablist">
                             <a class="category__tab active" data-toggle="list" href="#silicagel-brewing" role="tab" aria-controls="silicagel-brewing">
                                 Для пивоварения
@@ -429,7 +429,7 @@
                                     <div class="col-lg-6">
                                         <div class="advantage">
                                             <img src="images/categories/bentonite-dosage.jpg" class="advantage__image" alt="">
-                                            <div class="advantage__caption">Обеспечивает снижение дозировки бентонита</div>
+                                            <div class="advantage__caption">Обеспечение снижения дозировки бентонита</div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
